--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
     "name": "teia-search-cli",
-    "version": "1.0.0",
+    "version": "1.0.2",
+    "preferGlobal": "true",
     "description": "Utilitário via linha de comando para o teia-search",
     "main": "main.js",
+	"bin": {
+    "teiacli": "./bin/teiacli"
+  },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
